--- a/static/finder/css/finder.css
+++ b/static/finder/css/finder.css
@@ -21,3 +21,5 @@
 @import url('components/projects.css');
 @import url('components/analogs.css');
 @import url('components/any.css');
+@import url('components/details.css');
+@import url('components/manual.css');
