--- a/static/finder/css/components/any.css
+++ b/static/finder/css/components/any.css
@@ -57,3 +57,94 @@
 }
 
 
+.check_box {
+    width: 17px;
+    height: 14px;
+}
+
+.search_bar {
+    margin-top: 16px;
+}
+
+.info_update {
+    text-align: center;
+    margin-right: 40px;
+}
+
+.logo {
+    text-align: center;
+    height: 150px;
+    padding: 20px 0;
+}
+
+.info_title {
+    color: var(--text-color);
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 22px;
+    text-align: center;
+}
+
+.position_title {
+    color: var(--text-color);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19px;
+    text-align: left;
+}
+
+.position_title p {
+    color: var(--text-color);
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 17px;
+    text-align: left;
+}
+
+
+.circle {
+    width: 11px;
+    height: 10px;
+    background-color: var(--red-color);
+    border-radius: 100%;
+    margin-right: 5px;
+}
+
+
+.hide_info {
+    color: rgb(165, 176, 187);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19px;
+    text-align: center;
+    cursor: pointer;
+}
+
+
+
+.title_count {
+    margin-right: 5px;
+}
+
+.arrow_img {
+    margin-left: 5px;
+    margin-bottom: 5px;
+}
+
+.total_contauner {
+    display: flex;
+    gap: 10px;
+}
+
+
+/* .name_position {
+    color: rgb(31, 58, 85);
+    font-family: var(--font-family);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    text-align: left;
+    margin-left: 30px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+} */
