--- a/static/finder/css/finder.css
+++ b/static/finder/css/finder.css
@@ -23,3 +23,8 @@
 @import url('components/any.css');
 @import url('components/details.css');
 @import url('components/manual.css');
+
+/* Шрифты
+
+
+http://192.168.100.83:8000/static/shared/css/base/typography.css
