--- a/static/shared/css/base/typography.css
+++ b/static/shared/css/base/typography.css
@@ -1,8 +1,7 @@
 @font-face {
     font-family: 'Inter';
-    src: url('../../../fonts/inter/Inter_18pt-Light.ttf') format('truetype');
+    src: url('../../fonts/inter/Inter_18pt-Light.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
-/* Пока оставляем только шрифты, остальную типографику перенесем позже */
