--- a/static/finder/css/components/projects.css
+++ b/static/finder/css/components/projects.css
@@ -87,7 +87,7 @@
 
 .project_item, .any_projects {
     display: flex;
-    align-items: center;
+    gap: 5px;
 }
 
 
@@ -96,7 +96,7 @@
 }
 
 .any_projects p {
-    color:  var(--red-color);
+    color:  var(--button_close);
     font-size: 16px;
     font-weight: 500;
     line-height: 19px;
