--- a/static/shared/css/base/variables.css
+++ b/static/shared/css/base/variables.css
@@ -1,19 +1,21 @@
 :root {
-    /* ВАШИ СТАРЫЕ ПЕРЕМЕННЫЕ (сохраняем как есть) */
-    --primary-color: rgb(31, 58, 85);
-    --secondary-color: rgb(251, 184, 160);
-    --text-color: rgb(255, 255, 255);
+      /* Компоненты */
+    --color-success: rgba(12, 207, 19, 1);
+    --color-success-muted: color-mix(in srgb, var(--color-success) 30%, transparent);
+    /* шрифт */
     --font-family: 'Inter', sans-serif;
-    --border-color: black;
-    --red-color: rgb(246, 78, 17);
 
-    /* НОВЫЕ ПЕРЕМЕННЫЕ (дополняем) */
-    --success-color: rgba(158, 236, 160, 1);
-    --gray-light: rgb(216, 222, 227);
-    --gray-medium: rgb(165, 176, 187);
-    
-    /* Размеры из ваших старых стилей */
-    --sidebar-width: 254px;
-    --header-height: 96px;
-    --table-height: 82vh;
+    /* Переменные */
+    --sidebar: rgb(31, 58, 85);
+    --button_clear: rgb(251, 184, 160);
+    --button_update_access: rgba(12, 207, 19, 1);
+    --button_update_denited: var(--color-success-muted);
+    --button__filter_view_all: var(--button_update_access);
+    --button_filter_submit: var(--sidebar);
+    --button_close: rgb(246, 78, 17);
+    --headr_table: rgba(158, 236, 160, 1);
+    --text-color: rgb(255, 255, 255);
+    --body_text_color: rgba(31, 58, 85, 1);
+    --body_text_weight: 500;
 }
+
