--- a/static/shared/css/components/sidebar.css
+++ b/static/shared/css/components/sidebar.css
@@ -3,7 +3,7 @@
     position: fixed;
     width: 254px;
     min-height: 100vh;
-    background: var(--primary-color);
+    background: var(--sidebar);
     padding: 0 15px;
     border: 1px solid black;
 }
@@ -16,19 +16,6 @@
     margin-bottom: 5px;
 }
 
-.menu_row, .menu_row_down {
-    display: flex;
-    align-items: center;
-    padding: 4px;
-    gap: 8px;
-}
 
-.menu_link a {
-    color: var(--text-color);
-    font-size: 18px;
-    transition: color 0.3s ease;
-    text-decoration: none;
-    margin-right: 5px;
-}
 
 
