--- a/comers/templates/comers/index.html
+++ b/comers/templates/comers/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'comers/css/style.css'%}">
+    {% comment %} <link rel="stylesheet" href="{% static 'comers/css/style.css'%}"> {% endcomment %}
     <link rel="stylesheet" href="{% static 'css/null_for_templates.css' %}">
     <title>Установка фильтров</title>
 </head>
