--- a/finder/templates/finder/index2.html
+++ b/finder/templates/finder/index2.html
@@ -52,14 +52,14 @@
             </div>
         </header>
         <div class="filter_project_container">
-            <div class="button_wrapper" id="button_filter_projects">
+            <div class="button button--dark" id="button_filter_projects">
                 <img src="{% static '/finder/icon/filter.png' %}" alt="Иконка фильтра">  
                 <div>Фильтр проектов</div>
             </div>
             <div class="selected-projects-container">
                 <!-- Сюда будем добавлять выбранные проекты через JS -->
             </div>
-            <div class="button_wrapper_clear">
+            <div class="button button--alert">
                 <div>Сбросить фильтр</div>
             </div>
         </div>
@@ -291,7 +291,7 @@
 
             </div> 
             <div class="down_menu">
-                <div class="button_wrapper_update">
+                <div class="button button--primary ">
                     <img src="{% static 'finder/icon/update_base.svg' %}" alt="Иконка обновления базы">
                     <div>Обновить базу</div>
                 </div>
