--- a/static/shared/css/components/sidebar.css
+++ b/static/shared/css/components/sidebar.css
@@ -3,13 +3,13 @@
     position: fixed;
     width: 254px;
     min-height: 100vh;
-    background: var(--sidebar);
+    background: var(--color-dark-blue);
     padding: 0 15px;
     border: 1px solid black;
 }
 
 .sidebar p {
-    color: rgb(165, 176, 187);
+    color: var(--color-blue-alt);
     font-size: 12px;
     font-weight: 300;
     line-height: 15px;
