--- a/static/finder/css/components/menu.css
+++ b/static/finder/css/components/menu.css
@@ -6,17 +6,17 @@
 }
 
 .menu_link a {
-    color: var(--text-color);
+    color: var(--text-color-white);
     font-size: 18px;
  
 }
 
 .menu_row:hover  .menu_link a {
-    color: var(--button_clear)
+    color: var(--color-orange-alt)
 }
 
 .menu_row_down:hover  .menu_link a {
-    color: var(--button_clear)
+    color: var(--color-orange-alt)
 }
 
 .down_menu {
