--- a/static/finder/css/components/any.css
+++ b/static/finder/css/components/any.css
@@ -87,7 +87,7 @@
 }
 
 .info_title {
-    color: var(--text-color);
+    color: var(--text-color-white);
     font-size: 18px;
     font-weight: 500;
     line-height: 22px;
@@ -95,7 +95,7 @@
 }
 
 .position_title {
-    color: var(--text-color);
+    color: var(--text-color-white);
     font-size: 16px;
     font-weight: 500;
     line-height: 19px;
