--- a/static/finder/css/components/projects.css
+++ b/static/finder/css/components/projects.css
@@ -74,9 +74,7 @@
 .item_project_popup {
     height: 33vh;
     overflow: auto;
-    
 }
-
 
 .title_popup_any_projects {
     color: rgb(31, 58, 85);
@@ -96,7 +94,7 @@
 }
 
 .any_projects p {
-    color:  var(--button_close);
+    color:  var(--color-orange);
     font-size: 16px;
     font-weight: 500;
     line-height: 19px;
