--- a/static/shared/css/components/buttons.css
+++ b/static/shared/css/components/buttons.css
@@ -13,91 +13,66 @@
     font-family: var(--font-family);
 }
 
-
-/* Семантичные модификаторы */
-.button--primary {
-    background: var(--button-primary-bg);
-    color: var(--button-primary-text);
+/* Зеленая яркая */
+.button--green {
+    background: var(--color-green);
+    color: var(--text-color-white);
+    gap: 5px;
 }
 
-.button--alert {
-    background: var(--color-orange-alt);
-    color: var( --text-color-white);
-
-}
-
-.button--secondary {
-    background: var(--button-secondary-bg);
-    color: var(--button-secondary-text);
-}
-
-.button--accent {
-    background: var(--button-accent-bg);
-    color: var(--button-accent-text);
-}
-
-.button--dark {
-    background: var(--button-dark-bg);
-    color: var(--button-dark-text);
-}
-
-.button--light {
-    background: var(--button-light-bg);
-    color: var(--button-light-text);
-}
-
-/* Состояния */
-.button:disabled {
+/* Зеленая туская */
+.button--green-dim {
+    background: var(--color-green);
+    color: var(--text-color-white);
     opacity: var(--button-disabled-opacity);
     cursor: not-allowed;
 }
 
-.button_wrapper,
-.button_wrapper_clear,
-.button_wrapper_update,
-.button_wrapper_close,
-.button_wrapper_filter_view_all,
-.button_wrapper_filter_submit {
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 40px;
-    color: var(--text-color);
-    font-size: 16px;
-    cursor: pointer;
-    width: 224px;
+/* Красная яркая */
+.button--red {
+    background: var(--color-orange);
+    color: var( --text-color-white);
 }
 
-.button_wrapper {
-    background: var(--sidebar);
-    margin-left: 45px;
+/* Красная тусклая */
+.button--red-dim {
+    background: var(--color-orange);
+    color: var( --text-color-white);
+    opacity: var(--button-disabled-opacity);
+    cursor: not-allowed;
 }
 
-.button_wrapper_clear {
-    background: var(--button_clear);
-    margin-right: 40px;
+
+
+/* Темно синяя яркая */
+.button--dark-blue {
+    background: var(--color-dark-blue);
+    color: var(--text-color-white);
+    
 }
 
-.button_wrapper_update {
-    background: var(--button_update_access);
-    margin-bottom: 5px;
-    gap: 10px;
+/* Темно синяя тусклая */
+.button--dark-blue-dim {
+    background: var(--color-dark-blue);
+    color: var(--text-color-white);
+    opacity: var(--button-disabled-opacity);
+    cursor: not-allowed;
 }
 
-.button_wrapper_close {
-    background: var(--button_close);
+/* Белая черный шрифт */
+.button--white {
+    background: var(--text-color-white);
+    color: var(--body-text-color);
+    border: 1px solid black;
 }
 
-.button_wrapper_filter_view_all {
-    background: #0CCF13;
+/* Белая черный шрифт тусклая */
+.button--white-dim {
+    background: var(--text-color-white);
+    color: var(--body-text-color);
+    opacity: var(--button-disabled-opacity);
+    cursor: not-allowed;
+    border: 1px solid black;
 }
 
-.button_wrapper_filter_clear {
-    background: #F64E11;
-}
-
-.button_wrapper_filter_submit {
-    background: #1F3A55;
-}
 
